== 1.3.0 2009-03-17

* install_cucumber: using layout like Rails' cucumber generator: features/support/env.rb + features/step_definitions/common_steps.rb

== 1.2.3 2008-12-29

* 'rake features' uses --format progress now
* bump rubigen to 1.5.1
* move website to gh-pages branch, and official homepage to http://drnic.github.com/newgem

== 1.2.2 2008-12-27

* Added USAGE file to install_cucumber generator so it shows up in lists of available generators
* Some improvements to common.rb

== 1.2.1 2008-12-15

* Fixed 'uninitialized constant NewgemGenerator::Newgem' bug [#14]
* Fixed some cucumber steps after rubigen refactoring

== 1.2.0 2008-12-11

* Newgem + RubiGen are Ruby 1.9.1 compliant.

== 1.1.0 2008-11-11

* Support for ~/.newgem.yml file for default CLI arguments
  * Example content: `default: -T rspec -i cucumber`
* executable and extconf generators will create specs or tests depending on what you are using in your RubyGems
* executable generator: test/spec files give more useful starting point with a StringIO passed into CLI.execute(stdout, args)
* 'rake manifest' instead of 'rake manifest:refresh' [was actually released in 1.0.7]

== 1.0.7 2008-11-08

* Removed 'rake local_deploy' and changed website to reference 'rake install_gem' for same purpose [fixed #9]
* Fixed --version option (+ added cucumber scenario) [fixed #8]
* Cleaned up the common.rb steps

== 1.0.6 2008-11-05

* Removed cucumber references in newgem's Rakefile, hopefully fixing #7

== 1.0.5 2008-11-01

* Oops, fixed cucumber dependency from 1.1.8 to 0.1.8

== 1.0.4 2008-11-01

* Hard-coded cucumber >= 0.1.8 dependency to avoid accidently requiring unreleased versions that are only in development
* local tasks/*.rake are loaded in generated gems
* install_cucumber: adds a development.feature to check that gem building can succeed
* cleaned up some require statements to explicitly load code from local src not an installed gem