@@ -7,8 +7,8 @@ Feature: RubyGems can have a website to promote and teach
   Scenario: Deploy project website via local rsync
     Given an existing newgem scaffold [called 'my_project']
     And project website configuration for safe folder on local machine
-    When 'install_website' generator is invoked with arguments ''
-    And task 'rake website' is invoked
+    When I invoke 'install_website' generator with arguments ''
+    And I invoke task 'rake website'
     Then file 'website/index.html' is created
     Then remote file 'index.html' is created after local rsync
     Then remote folder 'rdoc' is created after local rsync
