@@ -70,7 +70,7 @@ When /^newgem is executed only with options '(.*)'$/ do |arguments|
 end
 
 
-When /^run unit tests for test file '(.*)'$/ do |test_file|
+When /^I run unit tests for test file '(.*)'$/ do |test_file|
   @stdout = File.expand_path(File.join(@tmp_root, "tests.out"))
   FileUtils.chdir(@active_project_folder) do
     system "ruby #{test_file} > #{@stdout}"
