@@ -7,7 +7,7 @@ Feature: Development processes of newgem itself (rake tasks)
   Scenario: Generate RubyGem
     Given this project is active project folder
     And 'pkg' folder is deleted
-    When task 'rake gem' is invoked
+    When I invoke task 'rake gem'
     Then folder 'pkg' is created
     And file with name matching 'pkg/*.gem' is created else you should run "rake manifest" to fix this
     And gem spec key 'rdoc_options' contains /--mainREADME.rdoc/
