@@ -1,3 +1,5 @@
+* common_steps.rb - When steps all started with 'I ...'
+
 == 1.3.0 2009-03-17
 
 * install_cucumber: using layout like Rails' cucumber generator: features/support/env.rb + features/step_definitions/common_steps.rb
